Added rudimentary track system. Added levelHandler to handle all level-related assets and systems. Added temp class to test spawning and scaling.

--- a/gxptest2/GXPE Testo Uno.csproj
+++ b/gxptest2/GXPE Testo Uno.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LevelHandler.cs" />
     <Compile Include="Old Stuff\EntityController.cs" />
     <Compile Include="GXPEngine\AddOns\Camera.cs" />
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
