Restrained Train Movement + Parallax Background
Added a restrain on player movement so that they cannot go off-screen.
Added a 'MovingBackgrounds' class for parallax scrolling. This class automatically creates 2 copies of the background sprite, and then cycles them when they go offscreen. Uses LevelHandler data for movement speed, multiplied with a factor for layered backgrounds.

--- a/gxptest2/GXPE Testo Uno.csproj
+++ b/gxptest2/GXPE Testo Uno.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="GXPEngine\Core\Vector2Double.cs" />
     <Compile Include="LevelHandler.cs" />
+    <Compile Include="MovingBackground.cs" />
     <Compile Include="Old Stuff\EntityController.cs" />
     <Compile Include="GXPEngine\AddOns\Camera.cs" />
     <Compile Include="GXPEngine\AddOns\Gizmos.cs" />
