Bombs are now being thrown and will kill you
Redo: Complete

--- a/gxptest2/GXPE Testo Uno.csproj
+++ b/gxptest2/GXPE Testo Uno.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Button.cs" />
+    <Compile Include="GXPEngine\Bomber.cs" />
     <Compile Include="GXPEngine\Core\Vector2Double.cs" />
     <Compile Include="LevelHandler.cs" />
     <Compile Include="Menu.cs" />
